Bug 120988 - Cannot set zoom >= 1000% in "Zoom & View Layout" dialog (gen and gtk2)
Summary: Cannot set zoom >= 1000% in "Zoom & View Layout" dialog (gen and gtk2)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-10-28 13:00 UTC by Regina Henschel
Modified: 2018-11-07 13:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2018-10-28 13:00:02 UTC
Start Draw and draw an object.
Use View > Zoom > Zoom... or click the zoom number field in the status bar to open the "Zoom & View Layout" dialog. Enter value 1000% or larger (up to 3000%) in "variable" field. OK.
Notice, that the view jumps to 5%.

Zooming to higher values works with slider or + button in the status bar and with Strg+mouse wheel. Only the dialog is defect.

The dialog is OK in Version: 5.4.7.2 (x64)
Build ID: c838ef25c16710f8838b1faec480ebba495259d0
CPU threads: 8; OS: Windows 6.19; UI render: default; 
Locale: en-US (en_US); Calc: CL

It is broken in Version: 6.0.0.0.alpha1+ (x64)
Build ID: a5af0fd9f27af42cf2e8571f659cdad6e606215b
CPU threads: 8; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2017-11-07_00:30:02
Locale: de-DE (en_US); Calc: CL
Comment 1 Xisco Faulí 2018-10-28 17:24:29 UTC
This is a much older regression. Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=062e6f76ba26d2c0a54a476a1168202bae2322a7

author	Caolán McNamara <caolanm@redhat.com>	2014-01-20 13:31:17 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2014-01-20 13:32:15 +0000
commit 062e6f76ba26d2c0a54a476a1168202bae2322a7 (patch)
tree 311aa670a8eb3d1d176c87732f9916377743fe5c
parent 78a61583c266a1fd222cd78c912e35e93f7010d3 (diff)
Related: #i56998# use locale rules to format percentage

Bisected with: bibisect-43max

Adding Cc: to Caolán McNamara
Comment 2 Edoardo Maria Elidoro 2018-10-28 17:38:18 UTC
Thank you for reporting the bug. I can not reproduce the bug in Version: 6.2.0.0.alpha1 (x64)
Build ID: ff46ad24d1d3cbcea45895520483ed1fd4ff488b
Thread CPU: 8; SO: Windows 10.0; Resa interfaccia: GL; VCL: win; 
Versione locale: it-IT (it_IT); Calc: threaded
Comment 3 V Stuart Foote 2018-10-28 18:14:12 UTC
In en-US locale with current master/6.2.0alpha1+ and 6.1.3.1 can not reproduce.

The zoom & view layout dialog responds to input in the variable field, and to spinner input for all values up to 3,000%

=-testing-=
Windows 10 Home 64-bit (1803) en-US with

Version: 6.1.3.1 (x64)
Build ID: a9670562c26181ec3afbe381c9ff499ae88c98b7
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: en-US (en_US); Calc: CL

Version: 6.2.0.0.alpha1+ (x64)
Build ID: 5690acdb44e8017055bb88e86e19d207836bb95c
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-27_02:59:30
Locale: en-US (en_US); Calc: threaded
Comment 4 Caolán McNamara 2018-10-28 20:43:00 UTC
I think its a mismatch of the formatted to text and from text wrt the locale
Comment 5 Commit Notification 2018-10-28 23:49:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/59d48c531a5cad27f02b91c9b86278d5ede211a1%5E%21

Resolves: tdf#120988 mismatch of in/out locale formatting

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2018-10-28 23:53:40 UTC
that probably fixes that
Comment 7 Xisco Faulí 2018-10-29 17:58:03 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 19a0698079fbba36646a2d06eaec3a7fde60b2f5
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, Thanks for the quick fix!
Comment 8 Commit Notification 2018-10-29 23:28:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/7a6e6d027ad41350ae1334d3e60dc1a6ce96c508%5E%21

Resolves: tdf#120988 mismatch of in/out locale formatting

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.